SIT-1685: Additional fix for button visibility

--- a/app/assets/stylesheets/partial/_dashboard.scss
+++ b/app/assets/stylesheets/partial/_dashboard.scss
@@ -1168,7 +1168,7 @@
 
   .review-grade-row {
     @extend .row;
-    margin: 0 15px 0 15px !important;
+    margin: 25px 15px 0 15px !important;
   }
 
   .review-question-title {
